<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.themafia.braintrainer.MainActivity">

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="251dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="Go"
        android:padding="40dp"
        android:text="@string/start"

        android:textSize="60sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/diagnosis3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="252dp"
            android:text="@string/diagnosis3"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/diagnosis2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/diagnosis2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="143dp"
            android:layout_marginTop="108dp"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintBottom_toTopOf="@+id/startbtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/button1"
                android:layout_width="199dp"
                android:layout_height="153dp"
                android:background="@android:color/holo_red_light"
                android:onClick="checkAnswer"
                android:tag="0"
                android:text="@string/one"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="199dp"
                android:layout_height="153dp"
                android:background="@android:color/holo_purple"
                android:onClick="checkAnswer"
                android:tag="1"
                android:text="@string/two"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="199dp"
                android:layout_height="153dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="checkAnswer"
                android:tag="2"
                android:text="@string/three"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="199dp"
                android:layout_height="153dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="checkAnswer"
                android:tag="3"
                android:text="@string/four"
                android:textSize="40sp" />
        </GridLayout>

        <TextView
            android:id="@+id/timer"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_blue_dark"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score"
            android:layout_width="113dp"
            android:layout_height="70dp"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="316dp"
            android:layout_marginTop="16dp"
            android:background="@color/primary_light"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textSize="30sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question"
            android:layout_width="161dp"
            android:layout_height="54dp"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="32dp"
            android:background="@color/newrr"
            android:lineSpacingExtra="10sp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/replay"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:background="@color/flatui"
            android:onClick="playAgain"
            android:text="@string/replay"

            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/resultview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/replay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_constraintVertical_bias="0.492" />

        <TextView
            android:id="@+id/diagnosis1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/diagnosis1"
            android:textColor="@android:color/holo_purple"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="230dp" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>